<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuitarTuner</string>
    <string name="action_settings">Settings</string>
    <string name="title"></string>
    <string name="e">E</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="e2">E</string>
    
</resources>
